--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Constellations</title>
     <style>
         body {
-            background-color: black;
+            background: linear-gradient(11deg, #0d091c, #0e0824);
             color: white;
             font-family: Arial, sans-serif;
             margin: 0;
@@ -16,28 +14,28 @@
         .navbar {
             position: sticky;
             top: 0;
-            background-color: rgba(51, 51, 51, 0.5); /* Semi-transparent background */
-            backdrop-filter: blur(10px); /* Background blur effect */
-            border-bottom: 2px solid white; /* White line separating navbar */
-            z-index: 1000; /* Ensures the navbar stays on top */
-            display: flex;
-            justify-content: center;
+            background-color: rgba(51, 51, 51, 0.8); /* Semi-transparent */
+            backdrop-filter: blur(10px); /* Background blur */
+            z-index: 1000;
+            border-bottom: 2px solid white; /* White line underneath */
+            overflow: hidden;
         }
 
         .navbar a {
-            padding: 14px 20px;
-            text-decoration: none;
+            float: left;
+            display: block;
             color: white;
             text-align: center;
-            font-size: 18px;
-            transition: background-color 0.3s;
+            padding: 14px 20px;
+            text-decoration: none;
         }
 
         .navbar a:hover {
-            background-color: rgba(255, 255, 255, 0.1); /* Slightly lighter on hover */
+            background-color: #575757;
         }
     </style>
 </head>
+
 <body>
 
     <div class="navbar">
