--- a/index.html
+++ b/index.html
@@ -158,6 +158,16 @@
             <li>Sheliak: ~960 light-years</li>
         </ul>
     </div>
-
+    
+    <div>
+        <p>sources: Wikipedia</p>
+        <ul>
+            <li>https://en.wikipedia.org/wiki/Cygnus_(constellation)</li>
+            <li>https://de.wikipedia.org/wiki/Vorlage:Infobox_Sternbild/Legende</li>
+            <li>https://de.wikipedia.org/wiki/Kleiner_B%C3%A4r#/media/Datei:Ursa_Minor_constellation_map.svg</li>
+            <li>https://de.wikipedia.org/wiki/Delphin_(Sternbild)#/media/Datei:Delphinus_constellation_map.svg</li>
+            <li>https://de.wikipedia.org/wiki/Schwan_(Sternbild)</li>
+        </ul>
+    </div>
 </body>
 </html>
