--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div id="cygnus" class="constellation">
         <h2>Cygnus (The Swan)</h2>
-        <img src="cygnus.jpg" alt="Cygnus Constellation" />
+        <img src="cygnus.svg" alt="Cygnus Constellation" />
         <p><strong>Star Names and Pattern:</strong> Cygnus forms a cross-shaped pattern, known as the Northern Cross. The main stars include Deneb (α Cygni), Albireo (β Cygni), Sadr (γ Cygni), Gienah (ε Cygni), and Rukh (δ Cygni).</p>
         <p><strong>Magnitude of Alpha and Beta Star:</strong></p>
         <ul>
