--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <tr>
             <td>α</td>
             <td>Deneb</td>
-            <td>2616 <strong>ly</strong></td>
+            <td>2,616 <strong>ly</strong></td>
             <td>1.25</td>
             <td>8,525 <strong>K</strong></td>
           </tr>
@@ -102,51 +102,51 @@
           <tr>
             <td>γ</td>
             <td>Sadr</td>
-            <td><strong></strong></td>
-            <td></td>
-            <td><strong></strong></td>
+            <td>1,800 <strong>ly</strong></td>
+            <td>2.23</td>
+            <td>6,100 <strong>K</strong></td>
           </tr>
           <tr>
             <td>δ</td>
             <td>Fawaris</td>
-            <td><strong></strong></td>
-            <td></td>
-            <td><strong></strong></td>
+            <td>165 <strong>ly</strong></td>
+            <td>2.87</td>
+            <td>9,600 <strong>K</strong></td>
           </tr>
           <tr>
             <td>ε</td>
             <td>Aljanah</td>
-            <td><strong></strong></td>
-            <td></td>
-            <td><strong></strong></td>
+            <td>72 <strong>ly</strong></td>
+            <td>2.48</td>
+            <td>7,320 <strong>K</strong></td>
           </tr>
           <tr>
             <td>ζ</td>
             <td>Zeta Cygni (A)</td>
-            <td><strong></strong></td>
-            <td></td>
-            <td><strong></strong></td>
+            <td>151 <strong>ly</strong></td>
+            <td>3.26</td>
+            <td>4,820 <strong>K</strong></td>
           </tr>
           <tr>
             <td>η</td>
             <td>Eta Cygni</td>
             <td>138 <strong>ly</strong></td>
-            <td></td>
+            <td>3.89</td>
             <td>4,780 <strong>K</strong></td>
           </tr>
           <tr>
             <td>ι2</td>
             <td>Iota(²) Cygni</td>
-            <td><strong></strong></td>
+            <td>115 <strong>ly</strong></td>
             <td>3.76</td>
             <td>8,216 <strong>K</strong></td>
           </tr>
           <tr>
             <td>κ</td>
-            <td>Kappa Cygnus</td>
-            <td><strong></strong></td>
-            <td></td>
-            <td><strong></strong></td>
+            <td>Kappa Cygni</td>
+            <td>124 <strong>ly</strong></td>
+            <td>3.80</td>
+            <td>6,515 <strong>K</strong></td>
           </tr>
         </table>
         <p><strong>Mythological Figure:</strong> Cygnus represents a swan. In Greek mythology, it’s associated with several myths, including the story of Zeus disguising himself as a swan.</p>
