--- a/index.html
+++ b/index.html
@@ -164,29 +164,53 @@
       <div id="delphinus" class="constellation">
         <h2>Delphinus (The Dolphin)</h2>
         <object type="image/svg+xml" data="delphinus.svg" alt="Delphinus Constellation"></object>
-        <p><strong>Star Names and Pattern:</strong> Delphinus forms a small diamond or kite-shaped pattern. The main stars include Sualocin (α Delphini) and Rotanev (β Delphini).</p>
-        <p><strong>Magnitude of Alpha and Beta Star:</strong></p>
-        <ul>
-          <li>α Delphini (Sualocin): Magnitude 3.77</li>
-          <li>β Delphini (Rotanev): Magnitude 3.63</li>
-        </ul>
-        <p><strong>Temperature of Alpha and Beta Star:</strong></p>
-        <ul>
-          <li>Sualocin: ~7,540 K</li>
-          <li>Rotanev: ~7,700 K</li>
-        </ul>
-        <p><strong>Right Ascension & Declination:</strong></p>
-        <ul>
-          <li>Sualocin: RA 20h 39m 38s | Dec +15° 54′ 43″</li>
-          <li>Rotanev: RA 20h 37m 33s | Dec +14° 35′ 42″</li>
-        </ul>
+        <table>
+          <tr>
+            <th>Star</th>
+            <th>Name</th>
+            <th>Distance</th>
+            <th>Magnitude</th>
+            <th>Temperature</th>
+          </tr>
+          <tr>
+            <td>α</td>
+            <td>Sualocin (A)</td>
+            <td>241 <strong>ly</strong></td>
+            <td>3.77</td>
+            <td>11,643 <strong>K</strong></td>
+          </tr>
+          <tr>
+            <td>β</td>
+            <td>Rotanev</td>
+            <td>97 <strong>ly</strong></td>
+            <td>3.63</td>
+            <td>6587 <strong>K</strong></td>
+          </tr>
+          <tr>
+            <td>γ</td>
+            <td>Gamma Delphini</td>
+            <td>101 <strong>ly</strong></td>
+            <td>4.27</td>
+            <td>6,600 <strong>K</strong></td>
+          </tr>
+          <tr>
+            <td>δ</td>
+            <td>Delta Delphini</td>
+            <td>223 <strong>ly</strong></td>
+            <td>4.43</td>
+            <td>7,340 <strong>K</strong></td>
+          </tr>
+          <tr>
+            <td>ε</td>
+            <td>Epsilon Delphini</td>
+            <td>358 <strong>ly</strong></td>
+            <td>4.03</td>
+            <td>9,200 <strong>K</strong></td>
+          </tr>
+        </table>
+        
         <p><strong>Mythological Figure:</strong> Delphinus is associated with the dolphin that saved the life of the Greek poet Arion.</p>
         <p><strong>Seasons When Visible:</strong> Best visible in the Northern Hemisphere from July to October.</p>
-        <p><strong>Light Year Distance from Earth:</strong></p>
-        <ul>
-          <li>Sualocin: ~241 light-years</li>
-          <li>Rotanev: ~97 light-years</li>
-        </ul>
       </div>
     </div>
 
@@ -194,29 +218,68 @@
       <div id="ursaminor" class="constellation">
         <h2>Ursa Minor (The Little Bear)</h2>
         <object type="image/svg+xml" data="ursaminor.svg" alt="Ursa Minor Constellation"></object>
-        <p><strong>Star Names and Pattern:</strong> Ursa Minor is famous for containing Polaris (α Ursae Minoris), the current North Star. The constellation forms a small dipper-like pattern.</p>
-        <p><strong>Magnitude of Alpha and Beta Star:</strong></p>
-        <ul>
-          <li>α Ursae Minoris (Polaris): Magnitude 1.97</li>
-          <li>β Ursae Minoris (Kochab): Magnitude 2.08</li>
-        </ul>
-        <p><strong>Temperature of Alpha and Beta Star:</strong></p>
-        <ul>
-          <li>Polaris: ~6,000 K</li>
-          <li>Kochab: ~4,500 K</li>
-        </ul>
-        <p><strong>Right Ascension & Declination:</strong></p>
-        <ul>
-          <li>Polaris: RA 02h 31m 49s | Dec +89° 15′ 51″</li>
-          <li>Kochab: RA 14h 50m 42s | Dec +74° 09′ 19″</li>
-        </ul>
+        <table>
+          <tr>
+            <th>Star</th>
+            <th>Name</th>
+            <th>Distance</th>
+            <th>Magnitude</th>
+            <th>Temperature</th>
+          </tr>
+          <tr>
+            <td>α</td>
+            <td>Polaris</td>
+            <td>323 <strong>ly</strong></td>
+            <td>1.98</td>
+            <td>6,015 <strong>K</strong></td>
+          </tr>
+          <tr>
+            <td>β</td>
+            <td>Kochab</td>
+            <td>130 <strong>ly</strong></td>
+            <td>2.08</td>
+            <td>4,126 <strong>K</strong></td>
+          </tr>
+          <tr>
+            <td>γ</td>
+            <td>Pherkad</td>
+            <td>487 <strong>ly</strong></td>
+            <td>3.00</td>
+            <td>8,450 <strong>K</strong></td>
+          </tr>
+          <tr>
+            <td>δ</td>
+            <td>Yildun</td>
+            <td>183 <strong>ly</strong></td>
+            <td>4.35</td>
+            <td>9,000 <strong>K</strong></td>
+          </tr>
+          <tr>
+            <td>ε</td>
+            <td>Epsilon UMi</td>
+            <td>347 <strong>ly</strong></td>
+            <td>4.23</td>
+            <td>7,980 <strong>K</strong></td>
+          </tr>
+          <tr>
+            <td>ζ</td>
+            <td>Zeta UMi</td>
+            <td>380 <strong>ly</strong></td>
+            <td>4.29</td>
+            <td>7,500 <strong>K</strong></td>
+          </tr>
+          <tr>
+            <td>η</td>
+            <td>Eta UMi</td>
+            <td>97 <strong>ly</strong></td>
+            <td>5.00</td>
+            <td>8,200 <strong>K</strong></td>
+          </tr>
+        </table>
+        
         <p><strong>Mythological Figure:</strong> Ursa Minor is associated with the myth of Arcas, the son of Callisto, who was transformed into a bear and placed in the sky.</p>
         <p><strong>Seasons When Visible:</strong> Visible year-round in the Northern Hemisphere due to its proximity to the North Pole.</p>
-        <p><strong>Light Year Distance from Earth:</strong></p>
-        <ul>
-          <li>Polaris: ~323 light-years</li>
-          <li>Kochab: ~130 light-years</li>
-        </ul>
+
       </div>
     </div>
 
@@ -224,29 +287,53 @@
       <div id="lyra" class="constellation">
         <h2>Lyra (The Lyre)</h2>
         <img src="lyra.jpg" alt="Lyra Constellation" />
-        <p><strong>Star Names and Pattern:</strong> Lyra is a small constellation known for its brightest star, Vega (α Lyrae). The constellation forms a small parallelogram.</p>
-        <p><strong>Magnitude of Alpha and Beta Star:</strong></p>
-        <ul>
-          <li>α Lyrae (Vega): Magnitude 0.03</li>
-          <li>β Lyrae (Sheliak): Magnitude 3.52</li>
-        </ul>
-        <p><strong>Temperature of Alpha and Beta Star:</strong></p>
-        <ul>
-          <li>Vega: ~9,600 K</li>
-          <li>Sheliak: ~13,000 K</li>
-        </ul>
-        <p><strong>Right Ascension & Declination:</strong></p>
-        <ul>
-          <li>Vega: RA 18h 36m 56s | Dec +38° 47′ 01″</li>
-          <li>Sheliak: RA 18h 50m 04s | Dec +33° 21′ 46″</li>
-        </ul>
+        <table>
+          <tr>
+            <th>Star</th>
+            <th>Name</th>
+            <th>Distance</th>
+            <th>Magnitude (V)</th>
+            <th>Temperature</th>
+          </tr>
+          <tr>
+            <td>α</td>
+            <td>Vega</td>
+            <td>25 <strong>ly</strong></td>
+            <td>0.03</td>
+            <td>9,602 <strong>K</strong></td>
+          </tr>
+          <tr>
+            <td>β</td>
+            <td>Sheliak (A)</td>
+            <td>960 <strong>ly</strong></td>
+            <td>3.52</td>
+            <td>13,200 <strong>K</strong></td>
+          </tr>
+          <tr>
+            <td>γ</td>
+            <td>Gamma Lyrae</td>
+            <td>620 <strong>ly</strong></td>
+            <td>3.25</td>
+            <td>10,500 <strong>K</strong></td>
+          </tr>
+          <tr>
+            <td>δ</td>
+            <td>Delta Lyrae</td>
+            <td>1,100 <strong>ly</strong></td>
+            <td>5.57</td>
+            <td>7,300 <strong>K</strong></td>
+          </tr>
+          <tr>
+            <td>ε</td>
+            <td>Epsilon Lyrae</td>
+            <td>162 <strong>ly</strong></td>
+            <td>4.67</td>
+            <td>7,500 <strong>K</strong></td>
+          </tr>
+        </table>
+
         <p><strong>Mythological Figure:</strong> Lyra represents the lyre of Orpheus, the musician who could charm anything with his music.</p>
         <p><strong>Seasons When Visible:</strong> Best visible in the Northern Hemisphere from June to October.</p>
-        <p><strong>Light Year Distance from Earth:</strong></p>
-        <ul>
-          <li>Vega: ~25 light-years</li>
-          <li>Sheliak: ~960 light-years</li>
-        </ul>
       </div>
     </div>
 
