--- a/index.html
+++ b/index.html
@@ -63,9 +63,14 @@
           font-size: 1.2em;
         }
         th, td {
-          padding: 5px;
+          padding: 5px 8px 5px 8px;
           text-align: left;
         }
+      
+      .svgNtable {
+        display: flex;
+        flex-direction: row;
+      }
 
     </style>
   </head>
@@ -82,65 +87,67 @@
     <div id="Ursaminor" class="outer">
       <div id="ursaminor" class="constellation">
         <h2>Ursa Minor (The Little Bear)</h2>
-        <object type="image/svg+xml" data="ursaminor.svg" alt="Ursa Minor Constellation"></object>
-        <table>
-          <tr>
-            <th>Star</th>
-            <th>Name</th>
-            <th>Distance</th>
-            <th>Magnitude</th>
-            <th>Temperature</th>
-          </tr>
-          <tr>
-            <td>α</td>
-            <td>Polaris</td>
-            <td>323 <strong>ly</strong></td>
-            <td>1.98</td>
-            <td>6,015 <strong>K</strong></td>
-          </tr>
-          <tr>
-            <td>β</td>
-            <td>Kochab</td>
-            <td>130 <strong>ly</strong></td>
-            <td>2.08</td>
-            <td>4,126 <strong>K</strong></td>
-          </tr>
-          <tr>
-            <td>γ</td>
-            <td>Pherkad</td>
-            <td>487 <strong>ly</strong></td>
-            <td>3.00</td>
-            <td>8,450 <strong>K</strong></td>
-          </tr>
-          <tr>
-            <td>δ</td>
-            <td>Yildun</td>
-            <td>183 <strong>ly</strong></td>
-            <td>4.35</td>
-            <td>9,000 <strong>K</strong></td>
-          </tr>
-          <tr>
-            <td>ε</td>
-            <td>Epsilon UMi</td>
-            <td>347 <strong>ly</strong></td>
-            <td>4.23</td>
-            <td>7,980 <strong>K</strong></td>
-          </tr>
-          <tr>
-            <td>ζ</td>
-            <td>Zeta UMi</td>
-            <td>380 <strong>ly</strong></td>
-            <td>4.29</td>
-            <td>7,500 <strong>K</strong></td>
-          </tr>
-          <tr>
-            <td>η</td>
-            <td>Eta UMi</td>
-            <td>97 <strong>ly</strong></td>
-            <td>5.00</td>
-            <td>8,200 <strong>K</strong></td>
-          </tr>
-        </table>
+        <div class=svgNtable>
+          <object type="image/svg+xml" data="ursaminor.svg" alt="Ursa Minor Constellation"></object>
+          <table>
+            <tr>
+              <th>Star</th>
+              <th>Name</th>
+              <th>Distance</th>
+              <th>Magnitude</th>
+              <th>Temperature</th>
+            </tr>
+            <tr>
+              <td>α</td>
+              <td>Polaris</td>
+              <td>323 <strong>ly</strong></td>
+              <td>1.98</td>
+              <td>6,015 <strong>K</strong></td>
+            </tr>
+            <tr>
+              <td>β</td>
+              <td>Kochab</td>
+              <td>130 <strong>ly</strong></td>
+              <td>2.08</td>
+              <td>4,126 <strong>K</strong></td>
+            </tr>
+            <tr>
+              <td>γ</td>
+              <td>Pherkad</td>
+              <td>487 <strong>ly</strong></td>
+              <td>3.00</td>
+              <td>8,450 <strong>K</strong></td>
+            </tr>
+            <tr>
+              <td>δ</td>
+              <td>Yildun</td>
+              <td>183 <strong>ly</strong></td>
+              <td>4.35</td>
+              <td>9,000 <strong>K</strong></td>
+            </tr>
+            <tr>
+              <td>ε</td>
+              <td>Epsilon UMi</td>
+              <td>347 <strong>ly</strong></td>
+              <td>4.23</td>
+              <td>7,980 <strong>K</strong></td>
+            </tr>
+            <tr>
+              <td>ζ</td>
+              <td>Zeta UMi</td>
+              <td>380 <strong>ly</strong></td>
+              <td>4.29</td>
+              <td>7,500 <strong>K</strong></td>
+            </tr>
+            <tr>
+              <td>η</td>
+              <td>Eta UMi</td>
+              <td>97 <strong>ly</strong></td>
+              <td>5.00</td>
+              <td>8,200 <strong>K</strong></td>
+            </tr>
+          </table>
+        </div>
         <p><strong>Mythological Figure:</strong> Ursa Minor is associated with the myth of Arcas, the son of Callisto, who was transformed into a bear and placed in the sky.</p>
         <p><strong>Seasons When Visible:</strong> Visible year-round in the Northern Hemisphere due to its proximity to the North Pole.</p>
       </div>
