--- a/index.html
+++ b/index.html
@@ -171,8 +171,9 @@
             <p class="legend">Magnitude is Apparent Magnitude (V)</p>
           </div>
         </div>
+        <p>Visible all year round from Michigan. However, it is easier to observe during clear winter and spring nights.</p>
         <p><strong>Mythological Figure:</strong> Ursa Minor is associated with the myth of Arcas, the son of Callisto, who was transformed into a bear and placed in the sky.</p>
-        <p><strong>Seasons When Visible:</strong> Visible year-round in the Northern Hemisphere due to its proximity to the North Pole.</p>
+        
       </div>
     </div>
 
@@ -260,7 +261,7 @@
           </div>
         </div>
         <p><strong>Mythological Figure:</strong> Cygnus represents a swan. In Greek mythology, it’s associated with several myths, including the story of Zeus disguising himself as a swan.</p>
-        <p><strong>Seasons When Visible:</strong> Best visible in the Northern Hemisphere from June to October.</p>
+        <p>Visible from June to December, Best Months: July to October, with its peak visibility in late summer.</p>
       </div>
     </div>
 
@@ -320,7 +321,7 @@
           </div>
         </div>
         <p><strong>Mythological Figure:</strong> Lyra represents the lyre of Orpheus, the musician who could charm anything with his music.</p>
-        <p><strong>Seasons When Visible:</strong> Best visible in the Northern Hemisphere from June to October.</p>
+        <p>Visible from May to December, Best Months: June to September, especially during the summer.</p>
       </div>
     </div>
 
@@ -378,7 +379,7 @@
           </div>
         </div>
         <p><strong>Mythological Figure:</strong> Delphinus is associated with the dolphin that saved the life of the Greek poet Arion.</p>
-        <p><strong>Seasons When Visible:</strong> Best visible in the Northern Hemisphere from July to October.</p>
+        <p>Visible from July to November, Best Months: August to October, particularly in late summer and early fall.</p>
       </div>
     </div>
 
