--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
             <p class="legend">Magnitude is Apparent Magnitude (V)</p>
           </div>
         </div>
-        <p>Visible all year round from Michigan. However, it is easier to observe during clear winter and spring nights.</p>
-        <p><strong>Mythological Figure:</strong> Ursa Minor is associated with the myth of Arcas, the son of Callisto, who was transformed into a bear and placed in the sky.</p>
+        <p class="visible">Visible all year round from Michigan. However, it is easier to observe during clear winter and spring nights.</p>
+        <p class="myth">The constellation Ursa Minor is often associated with the myth of the nymph Callisto. According to Greek mythology, Callisto, a follower of the goddess Artemis, was turned into a bear by either Zeus' jealous wife Hera or by Artemis herself for breaking her vow of chastity. Later, Zeus placed Callisto in the sky as Ursa Major, and her son, Arcas, became Ursa Minor. As the Little Bear, Ursa Minor represents Arcas, who was transformed to keep him safe. In other versions, it is simply referred to as the smaller bear guiding sailors with its prominent star, Polaris, at the tip of its tail.</p>
         
       </div>
     </div>
@@ -260,8 +260,8 @@
             <p class="legend">Magnitude is Apparent Magnitude (V)</p>
           </div>
         </div>
-        <p><strong>Mythological Figure:</strong> Cygnus represents a swan. In Greek mythology, it’s associated with several myths, including the story of Zeus disguising himself as a swan.</p>
-        <p>Visible from June to December, Best Months: July to October, with its peak visibility in late summer.</p>
+        <p class="visible">Visible from June to December, Best Months: July to October, with its peak visibility in late summer.</p>
+        <p class="myth">In Greek mythology, Cygnus is linked to several myths, the most popular being the story of the close friends Phaethon and Cygnus. When Phaethon lost control of the Sun’s chariot and crashed into the river Eridanus, Cygnus, overcome with grief, dove repeatedly into the river to retrieve his friend's body. The gods, moved by his loyalty, transformed him into a swan (Cygnus) so he could swim in the river forever. Another myth relates Cygnus to Zeus, who took the form of a swan to seduce Leda, the mother of Helen of Troy.</p>
       </div>
     </div>
 
@@ -320,8 +320,8 @@
             <p class="legend">Magnitude is Apparent Magnitude (V)</p>
           </div>
         </div>
-        <p><strong>Mythological Figure:</strong> Lyra represents the lyre of Orpheus, the musician who could charm anything with his music.</p>
-        <p>Visible from May to December, Best Months: June to September, especially during the summer.</p>
+        <p class="visible">Visible from May to December, Best Months: June to September, especially during the summer.</p>
+        <p class="myth">Lyra is associated with the myth of Orpheus, the legendary musician and poet. Orpheus played such beautiful music on his lyre that it could charm anyone, even inanimate objects. When his wife, Eurydice, died, Orpheus traveled to the underworld to retrieve her, using his music to soften the hearts of Hades and Persephone. Though he failed to bring her back, Zeus placed Orpheus’ lyre in the sky as the constellation Lyra, forever honoring his talents and love for Eurydice.</p>
       </div>
     </div>
 
@@ -378,8 +378,8 @@
             <p class="legend">Magnitude is Apparent Magnitude (V)</p>
           </div>
         </div>
-        <p><strong>Mythological Figure:</strong> Delphinus is associated with the dolphin that saved the life of the Greek poet Arion.</p>
-        <p>Visible from July to November, Best Months: August to October, particularly in late summer and early fall.</p>
+        <p class="visible">Visible from July to November, Best Months: August to October, particularly in late summer and early fall.</p>
+        <p class="myth">The constellation Delphinus is tied to the story of the Greek poet Arion, a talented lyre player. During a sea voyage, Arion was thrown overboard by greedy sailors who wanted to steal his wealth. As he played a final song on his lyre, a dolphin (delphinus) appeared and carried him safely to shore. Grateful for the dolphin’s kindness, Apollo placed the creature in the sky as the constellation Delphinus. Another myth relates Delphinus to the god Poseidon, who sent a dolphin to fetch the sea nymph Amphitrite and convince her to marry him.</p>
       </div>
     </div>
 
