--- a/index.html
+++ b/index.html
@@ -117,56 +117,63 @@
           <div class="tableNlegend">
             <table>
               <tr>
-                <th>Star</th>
+                <th>Designation¹</th>
                 <th>Name</th>
                 <th>Distance</th>
-                <th>Magnitude</th>
+                <th>Magnitude²</th>
                 <th>Temperature</th>
+                <th>Designation³</th>
               </tr>
               <tr>
-                <td>α</td>
-                <td>Polaris</td>
-                <td>323 <strong>ly</strong></td>
-                <td>1.98</td>
-                <td>6,015 <strong>K</strong></td>
+                <td>α Nikolaus (α Nik)</td>
+                <td>Deneb</td>
+                <td>2,616 <strong>ly</strong></td>
+                <td>1.25</td>
+                <td>8,525 <strong>K</strong></td>
+                <td>Alpha Cygni (α Cyg)</td>
               </tr>
               <tr>
-                <td>β</td>
-                <td>Kochab</td>
-                <td>130 <strong>ly</strong></td>
-                <td>2.08</td>
-                <td>4,126 <strong>K</strong></td>
+                <td>β Nikolaus (β Nik)</td>
+                <td>Sadr</td>
+                <td>1,800 <strong>ly</strong></td>
+                <td>2.23</td>
+                <td>6,100 <strong>K</strong></td>
+                <td>Gamma Cygni (γ Cyg)</td>
               </tr>
               <tr>
-                <td>γ</td>
-                <td>Pherkad</td>
-                <td>487 <strong>ly</strong></td>
-                <td>3.00</td>
-                <td>8,450 <strong>K</strong></td>
+                <td>γ Nikolaus (γ Nik)</td>
+                <td>Epsilon Cygni</td>
+                <td>72 <strong>ly</strong></td>
+                <td>2.48</td>
+                <td>4,670 <strong>K</strong></td>
+                <td>Epsilon Cygni (ε Cyg)</td>
               </tr>
               <tr>
-                <td>δ</td>
-                <td>Yildun</td>
-                <td>183 <strong>ly</strong></td>
-                <td>4.35</td>
-                <td>9,000 <strong>K</strong></td>
+                <td>δ Nikolaus (δ Nik)</td>
+                <td>Zeta Cygni</td>
+                <td>151 <strong>ly</strong></td>
+                <td>3.26</td>
+                <td>4,910 <strong>K</strong></td>
+                <td>Zeta Cygni (ζ Cyg)</td>
               </tr>
               <tr>
-                <td>ε</td>
-                <td>Epsilon UMi</td>
-                <td>347 <strong>ly</strong></td>
-                <td>4.23</td>
-                <td>7,980 <strong>K</strong></td>
+                <td>ε Nikolaus (ε Nik)</td>
+                <td>Tau Cygni</td>
+                <td>69 <strong>ly</strong></td>
+                <td>3.72</td>
+                <td>5,500 <strong>K</strong></td>
+                <td>Tau Cygni (τ Cyg)</td>
               </tr>
               <tr>
-                <td>ζ</td>
-                <td>Zeta UMi</td>
-                <td>380 <strong>ly</strong></td>
-                <td>4.29</td>
-                <td>7,500 <strong>K</strong></td>
+                <td>ζ Nikolaus (ζ Nik)</td>
+                <td>Eta Cygni</td>
+                <td>138 <strong>ly</strong></td>
+                <td>3.89</td>
+                <td>4,780 <strong>K</strong></td>
+                <td>Eta Cygni (η Cyg)</td>
               </tr>
             </table>
-            <p class="legend">Magnitude is Apparent Magnitude (V)</p>
+            <p class="legend">¹. This designation is my own made up designation <br>². Magnitude is Apparent Magnitude (V) <br>³. This is the official designation for the Star</p>
           </div>
         </div>
         <p class="visible">Visible all year round from Michigan. However, it is easier to observe during clear winter and spring nights.</p>
@@ -189,10 +196,10 @@
           <div class="tableNlegend">
             <table>
               <tr>
-                <th>Star</th>
+                <th>Designation</th>
                 <th>Name</th>
                 <th>Distance</th>
-                <th>Magnitude</th>
+                <th>Magnitude²</th>
                 <th>Temperature</th>
               </tr>
               <tr>
@@ -245,7 +252,7 @@
                 <td>8,200 <strong>K</strong></td>
               </tr>
             </table>
-            <p class="legend">Magnitude is Apparent Magnitude (V)</p>
+            <p class="legend">². Magnitude is Apparent Magnitude (V)</p>
           </div>
         </div>
         <p class="visible">Visible all year round from Michigan. However, it is easier to observe during clear winter and spring nights.</p>
@@ -263,10 +270,10 @@
           <div class="tableNlegend">
             <table>
               <tr>
-                <th>Star</th>
+                <th>Designation</th>
                 <th>Name</th>
                 <th>Distance</th>
-                <th>Magnitude</th>
+                <th>Magnitude²</th>
                 <th>Temperature</th>
               </tr>
               <tr>
@@ -302,14 +309,14 @@
                 <td>Aljanah</td>
                 <td>72 <strong>ly</strong></td>
                 <td>2.48</td>
-                <td>7,320 <strong>K</strong></td>
+                <td>4,670 <strong>K</strong></td>
               </tr>
               <tr>
                 <td>ζ</td>
                 <td>Zeta Cygni (A)</td>
                 <td>151 <strong>ly</strong></td>
                 <td>3.26</td>
-                <td>4,820 <strong>K</strong></td>
+                <td>4,910 <strong>K</strong></td>
               </tr>
               <tr>
                 <td>η</td>
@@ -333,7 +340,7 @@
                 <td>6,515 <strong>K</strong></td>
               </tr>
             </table>
-            <p class="legend">Magnitude is Apparent Magnitude (V)</p>
+            <p class="legend">². Magnitude is Apparent Magnitude (V)</p>
           </div>
         <object class="sternbild" type="image/svg+xml" data="cygnuslyra.svg" alt="Cygnus and Lyra Constellation"></object>
         </div>
@@ -352,10 +359,10 @@
           <div class="tableNlegend">
             <table>
               <tr>
-                <th>Star</th>
+                <th>Designation</th>
                 <th>Name</th>
                 <th>Distance</th>
-                <th>Magnitude (V)</th>
+                <th>Magnitude²</th>
                 <th>Temperature</th>
               </tr>
               <tr>
@@ -394,7 +401,7 @@
                 <td>7,500 <strong>K</strong></td>
               </tr>
             </table>
-            <p class="legend">Magnitude is Apparent Magnitude (V)</p>
+            <p class="legend">². Magnitude is Apparent Magnitude (V)</p>
           </div>
         </div>
         <p class="visible">Visible from May to December, Best Months: June to September, especially during the summer.</p>
@@ -409,10 +416,10 @@
           <div class="tableNlegend">
             <table>
               <tr>
-                <th>Star</th>
+                <th>Designation</th>
                 <th>Name</th>
                 <th>Distance</th>
-                <th>Magnitude</th>
+                <th>Magnitude²</th>
                 <th>Temperature</th>
               </tr>
               <tr>
@@ -451,7 +458,7 @@
                 <td>9,200 <strong>K</strong></td>
               </tr>
             </table>
-            <p class="legend">Magnitude is Apparent Magnitude (V)</p>
+            <p class="legend">². Magnitude is Apparent Magnitude (V)</p>
           </div>
         <object class="sternbild" type="image/svg+xml" data="delphinus.svg" alt="Delphinus Constellation"></object>
         </div>
