--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
 
     <div id="Nikolaus" class="outer">
       <div id="Nikolaus" class="constellation">
-        <h2>The crooked house of St. Nicholas</h2>
+        <h2>The crooked house of St. Nicholas <strong>Das krumme Haus vom Nikolaus</strong></h2>
         <p>
           My very own constellation is the so called crooked house of St. Nicholas. It is in the area of the Cygnus constellation and five of it's six main stars are main stars of the Cygnus constellation. <br>
-          The six stars form the shape of a house when connected and without the 
+          The stars (if you exclude β Nik) can be connected with a single line to form the (in germany notorious) house of St. Nicholas.
         </p>
         <div class=svgNtable>
           <object class="sternbild" type="image/svg+xml" data="nikolaus.svg" alt="Nikolaus Constellation"></object>
