--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <td>2,616 <strong>ly</strong></td>
                 <td>1.25</td>
                 <td>8,525 <strong>K</strong></td>
-                <td>Alpha Cygni (α Cyg)</td>
+                <td>α Cyg | Alpha Cygni</td>
               </tr>
               <tr>
                 <td>β Nikolaus (β Nik)</td>
@@ -138,23 +138,23 @@
                 <td>1,800 <strong>ly</strong></td>
                 <td>2.23</td>
                 <td>6,100 <strong>K</strong></td>
-                <td>Gamma Cygni (γ Cyg)</td>
+                <td>γ Cyg | Gamma Cygni</td>
               </tr>
               <tr>
                 <td>γ Nikolaus (γ Nik)</td>
-                <td>Epsilon Cygni</td>
-                <td>72 <strong>ly</strong></td>
-                <td>2.48</td>
-                <td>4,670 <strong>K</strong></td>
-                <td>Epsilon Cygni (ε Cyg)</td>
+                <td>Delta Cygni</td>
+                <td>165 <strong>ly</strong></td>
+                <td>2.87</td>
+                <td>9,600 <strong>K</strong></td>
+                <td>δ Cyg | Delta Cygni</td>
               </tr>
               <tr>
                 <td>δ Nikolaus (δ Nik)</td>
-                <td>Zeta Cygni</td>
-                <td>151 <strong>ly</strong></td>
-                <td>3.26</td>
-                <td>4,910 <strong>K</strong></td>
-                <td>Zeta Cygni (ζ Cyg)</td>
+                <td>Epsilon Cygni</td>
+                <td>72 <strong>ly</strong></td>
+                <td>2.48</td>
+                <td>7,800 <strong>K</strong></td>
+                <td>ε Cyg | Epsilon Cygni</td>
               </tr>
               <tr>
                 <td>ε Nikolaus (ε Nik)</td>
@@ -162,7 +162,7 @@
                 <td>69 <strong>ly</strong></td>
                 <td>3.72</td>
                 <td>5,500 <strong>K</strong></td>
-                <td>Tau Cygni (τ Cyg)</td>
+                <td>τ Cyg | Tau Cygni</td>
               </tr>
               <tr>
                 <td>ζ Nikolaus (ζ Nik)</td>
@@ -170,9 +170,10 @@
                 <td>138 <strong>ly</strong></td>
                 <td>3.89</td>
                 <td>4,780 <strong>K</strong></td>
-                <td>Eta Cygni (η Cyg)</td>
+                <td>η Cyg | Eta Cygni</td>
               </tr>
             </table>
+
             <p class="legend">¹. This designation is my own made up designation <br>². Magnitude is Apparent Magnitude (V) <br>³. This is the official designation for the Star</p>
           </div>
         </div>
