--- a/index.html
+++ b/index.html
@@ -177,9 +177,7 @@
             <p class="legend">¹. This designation is my own made up designation <br>². Magnitude is Apparent Magnitude (V) <br>³. This is the official designation for the Star</p>
           </div>
         </div>
-        <p class="visible">Visible all year round from Michigan. However, it is easier to observe during clear winter and spring nights.</p>
-        <p class="myth">The constellation Ursa Minor is often associated with the myth of the nymph Callisto. According to Greek mythology, Callisto, a follower of the goddess Artemis, was turned into a bear by either Zeus' jealous wife Hera or by Artemis herself for breaking her vow of chastity. Later, Zeus placed Callisto in the sky as Ursa Major, and her son, Arcas, became Ursa Minor. As the Little Bear, Ursa Minor represents Arcas, who was transformed to keep him safe. In other versions, it is simply referred to as the smaller bear guiding sailors with its prominent star, Polaris, at the tip of its tail.</p>
-        
+        <p class="visible">Visible from June to December, Best Months: July to October, with its peak visibility in late summer.</p>        
       </div>
     </div>
 
