--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
         max-width: 40%;
       }
 
-      
+      .sternbildNIKOLAUS {
+        flex-grow: 1;
+        max-width: 80%;
+      }
       
     </style>
   </head>
@@ -112,8 +115,8 @@
           My very own constellation is the so called crooked house of St. Nicholas. It is in the area of the Cygnus constellation and five of it's six main stars are main stars of the Cygnus constellation. <br>
           The stars (if you exclude β Nik) can be connected with a single line to form the (in germany notorious) house of St. Nicholas.
         </p>
-        <div class=svgNtable>
-          <object class="sternbild" type="image/svg+xml" data="nikolaus.svg" alt="Nikolaus Constellation"></object>
+        <div>
+          <object class="sternbildNIKOLAUS" type="image/svg+xml" data="nikolaus.svg" alt="Nikolaus Constellation"></object>
           <div class="tableNlegend">
             <table>
               <tr>
@@ -190,7 +193,7 @@
     <div id="Ursaminor" class="outer">
       <div id="ursaminor" class="constellation">
         <h2>Ursa Minor (The Little Bear)</h2>
-        <div class=svgNtable>
+        <div class="svgNtable">
           <object class="sternbild" type="image/svg+xml" data="ursaminor.svg" alt="Ursa Minor Constellation"></object>
           <div class="tableNlegend">
             <table>
@@ -265,7 +268,7 @@
     <div id="Cygnus" class="outer">
       <div id="cygnus" class="constellation">
         <h2>Cygnus (The Swan)</h2>
-        <div class=svgNtable>
+        <div class="svgNtable">
           <div class="tableNlegend">
             <table>
               <tr>
@@ -353,7 +356,7 @@
     <div id="Lyra" class="outer">
       <div id="lyra" class="constellation">
         <h2>Lyra (The Lyre)</h2>
-        <div class=svgNtable>
+        <div class="svgNtable">
           <object class="sternbild" type="image/svg+xml" data="cygnuslyra.svg" alt="Cygnus and Lyra Constellation"></object>
           <div class="tableNlegend">
             <table>
@@ -411,7 +414,7 @@
     <div id="Delpinus" class="outer">
       <div id="delphinus" class="constellation">
         <h2>Delphinus (The Dolphin)</h2>
-        <div class=svgNtable>
+        <div class="svgNtable">
           <div class="tableNlegend">
             <table>
               <tr>
