--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
       .sternbildNIKOLAUS {
         flex-grow: 1;
-        max-width: 80%;
+        max-width: 100%;
       }
       
     </style>
@@ -115,7 +115,7 @@
           My very own constellation is the so called crooked house of St. Nicholas. It is in the area of the Cygnus constellation and five of it's six main stars are main stars of the Cygnus constellation. <br>
           The stars (if you exclude β Nik) can be connected with a single line to form the (in germany notorious) house of St. Nicholas.
         </p>
-        <div>
+        <div style="display: flex; flex-direction: column">
           <object class="sternbildNIKOLAUS" type="image/svg+xml" data="nikolaus.svg" alt="Nikolaus Constellation"></object>
           <div class="tableNlegend">
             <table>
