--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <th>Designation³</th>
               </tr>
               <tr>
-                <td>α Nikolaus (α Nik)</td>
+                <td>α Nikolaus</td>
                 <td>Deneb</td>
                 <td>2,616 <strong>ly</strong></td>
                 <td>1.25</td>
@@ -136,7 +136,7 @@
                 <td>α Cyg | Alpha Cygni</td>
               </tr>
               <tr>
-                <td>β Nikolaus (β Nik)</td>
+                <td>β Nikolaus</td>
                 <td>Sadr</td>
                 <td>1,800 <strong>ly</strong></td>
                 <td>2.23</td>
@@ -144,7 +144,7 @@
                 <td>γ Cyg | Gamma Cygni</td>
               </tr>
               <tr>
-                <td>γ Nikolaus (γ Nik)</td>
+                <td>γ Nikolaus</td>
                 <td>Delta Cygni</td>
                 <td>165 <strong>ly</strong></td>
                 <td>2.87</td>
@@ -152,7 +152,7 @@
                 <td>δ Cyg | Delta Cygni</td>
               </tr>
               <tr>
-                <td>δ Nikolaus (δ Nik)</td>
+                <td>δ Nikolaus</td>
                 <td>Epsilon Cygni</td>
                 <td>72 <strong>ly</strong></td>
                 <td>2.48</td>
@@ -160,7 +160,7 @@
                 <td>ε Cyg | Epsilon Cygni</td>
               </tr>
               <tr>
-                <td>ε Nikolaus (ε Nik)</td>
+                <td>ε Nikolaus</td>
                 <td>Tau Cygni</td>
                 <td>69 <strong>ly</strong></td>
                 <td>3.72</td>
@@ -168,7 +168,7 @@
                 <td>τ Cyg | Tau Cygni</td>
               </tr>
               <tr>
-                <td>ζ Nikolaus (ζ Nik)</td>
+                <td>ζ Nikolaus</td>
                 <td>Eta Cygni</td>
                 <td>138 <strong>ly</strong></td>
                 <td>3.89</td>
