--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
     </style>
   </head>
 
-  <body>
+  <body id="topofpage">
 
     <div class="navbar">
+      <a href="#topofpage" style="font-weight:600">St. Nicholas</a>
       <a href="#ursaminor">Ursa Minor</a>
       <a href="#cygnus">Cygnus</a>
       <a href="#lyra">Lyra</a>
